<resources>
    <!-- Analytics -->
    <string name="analytic_trip_type" translatable="false">trip_type</string>

    <!-- Crash -->
    <string name="crash_type_index" translatable="false">Index out of bounds caught</string>
    <string name="crash_type_null" translatable="false">NPE caught</string>

    <!-- Transitions -->
    <string name="transition_name_icon_shape" translatable="false">transition_icon_shape</string>
    <string name="transition_name_icon_text" translatable="false">transition_icon_text</string>

    <!-- Shared preferences -->
    <string name="pref_summary_file_key" translatable="false">se.johanmagnusson.android.adomile.SUMMARY_FILE_KEY</string>
    <string name="pref_month_key" translatable="false">month_key</string>
    <string name="pref_inbound_key" translatable="false">inbound_key</string>
    <string name="pref_outbound_key" translatable="false">outbound_key</string>
    <string name="pref_total_private_key" translatable="false">total_private_key</string>
    <string name="pref_total_work_key" translatable="false">total_work_key</string>

    <!-- Toolbar -->
    <string name="app_name" translatable="false">Adomile</string>
    <string name="trip_details">Details</string>

    <!-- Menu items -->
    <string name="action_settings">Settings</string>

    <!--Tab titles-->
    <string name="tab_summary">Summary</string>
    <string name="tab_register">Register</string>
    <string name="tab_log">Log</string>

    <!-- Shared in multiple views-->
    <string name="trip_type_private">Private</string>
    <string name="trip_type_work">Work</string>
    <string name="trip_mileage_summary">%d km</string>
    <string name="trip_mileage" translatable="false">%d</string>
    <string name="trip_type_letter_private">P</string>
    <string name="trip_type_letter_work">W</string>

    <!-- Main activity -->
    <string name="trip_registered_message">Trip added</string>

    <!-- Register view -->
    <string name="register_trip">Register trip</string>
    <string name="date">Date</string>
    <string name="destination">Destination</string>
    <string name="mileage">Mileage</string>
    <string name="note">Note</string>
    <string name="info_card_title">Get started</string>
    <string name="info_card_text">Add current mileage as your start destination</string>
    <string name="trip_card_title">Previous trip</string>

    <!-- Summary view -->
    <string name="in_out_mileage" translatable="false">%1$d - %2$d</string>

    <!-- Log View -->
    <string name="empty_log_list">You have no registered trips yet</string>

    <!-- Menu actions -->
    <string name="action_delete">Delete</string>

</resources>
