<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height">

    <FrameLayout
        android:id="@+id/icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/list_item_horizontal_margin"
        android:layout_marginStart="@dimen/list_item_horizontal_margin">

        <View
            android:id="@+id/icon_shape"
            android:layout_width="@dimen/list_item_icon_size"
            android:layout_height="@dimen/list_item_icon_size"
            android:background="@drawable/circle_private"
            android:transitionName="@string/transition_name_icon_shape"/>

        <TextView
            android:id="@+id/icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/white"
            android:transitionName="@string/transition_name_icon_text"
            tools:text="@string/trip_type_letter_private"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/list_item_icon_to_text_margin"
        android:layout_marginStart="@dimen/list_item_icon_to_text_margin"
        android:layout_marginRight="@dimen/list_item_icon_to_text_margin"
        android:layout_marginEnd="@dimen/list_item_icon_to_text_margin"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/trip_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Destination"/>

        <TextView
            android:id="@+id/trip_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Today"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/list_item_horizontal_margin"
        android:layout_marginEnd="@dimen/list_item_horizontal_margin">

        <TextView
            android:id="@+id/trip_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="34km"/>

        <TextView
            android:id="@+id/trip_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5074"/>
    </LinearLayout>
</RelativeLayout>