<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripDetailActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/type_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/content_space"
            android:paddingBottom="@dimen/content_space"
            android:layout_marginLeft="@dimen/icon_horizontal_margin"
            android:layout_marginStart="@dimen/icon_horizontal_margin">

            <View
                android:id="@+id/icon_shape"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="@drawable/circle_private" />

            <TextView
                android:id="@+id/icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/white"
                tools:text="P"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/content_space"
            android:paddingBottom="@dimen/content_space"
            android:layout_below="@id/type_container">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:src="@mipmap/ic_calendar_black_24dp"
                android:alpha="@dimen/icon_active_opacity"
                android:contentDescription="@string/date"/>

            <TextView
                android:id="@+id/register_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon_text_margin"
                android:layout_marginStart="@dimen/icon_text_margin"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_view_text_size"
                tools:text="3 May, 2016" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/destination_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/content_space"
            android:paddingBottom="@dimen/content_space"
            android:layout_below="@id/date_container">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon_horizontal_margin"
                android:layout_marginStart="@dimen/icon_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_map_marker_black_24dp"
                android:alpha="@dimen/icon_active_opacity"
                android:contentDescription="@string/destination"/>

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon_text_margin"
                android:layout_marginStart="@dimen/icon_text_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_view_text_size"
                tools:text="Destination" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/mileage_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/content_space"
            android:paddingBottom="@dimen/content_space"
            android:layout_below="@id/destination_container">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon_horizontal_margin"
                android:layout_marginStart="@dimen/icon_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_gauge_black_24dp"
                android:alpha="@dimen/icon_active_opacity"
                android:contentDescription="@string/mileage"/>

            <TextView
                android:id="@+id/mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon_text_margin"
                android:layout_marginStart="@dimen/icon_text_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_view_text_size"
                tools:text="Mileage" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/note_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/content_space"
            android:paddingBottom="@dimen/content_space"
            android:layout_below="@id/mileage_container">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon_horizontal_margin"
                android:layout_marginStart="@dimen/icon_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_insert_comment_black_24dp"
                android:alpha="@dimen/icon_active_opacity"
                android:contentDescription="@string/note"/>

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/icon_text_margin"
                android:layout_marginStart="@dimen/icon_text_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_view_text_size"
                tools:text="Note" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>